--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,10 @@ jobs:
           python-version: '3.12'
 
       - name: Install Poetry
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
+        run: pip install poetry
 
       - name: Install dependencies
-        run: |
-          poetry install
+        run: poetry install --no-root
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
