--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,11 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install Poetry
-        run: pip install poetry
-
       - name: Install dependencies
-        run: poetry install --no-root
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --no-root
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
