--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
-          poetry install --with dev
+          poetry install
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
