--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.20"
 psycopg2-binary = "^2.9.10"
 asyncpg = "^0.30.0"
+email-validator = "^2.3.0"
 
 [build-system]
 requires = ["poetry-core"]
