--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ python-multipart = "^0.0.20"
 psycopg2-binary = "^2.9.10"
 asyncpg = "^0.30.0"
 email-validator = "^2.3.0"
+aiosqlite = "^0.21.0"
+pydantic-settings = "^2.11.0"
+websockets = "^15.0.1"
 
 [build-system]
 requires = ["poetry-core"]
