--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,7 @@ jobs:
           DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
           DB_URL: ${{ secrets.DB_URL }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          ALGORITHM: HS256
         run: |
           echo "$SSH_PRIVATE_KEY" > private_key.pem
           chmod 600 private_key.pem
