--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ email-validator = "^2.3.0"
 aiosqlite = "^0.21.0"
 pydantic-settings = "^2.11.0"
 websockets = "^15.0.1"
+jinja2 = "^3.1.6"
 
 [build-system]
 requires = ["poetry-core"]
