--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install poetry
+          # Обновляем poetry.lock в соответствии с pyproject.toml
+          poetry lock --no-update
           poetry install --no-root
 
       - name: Set up Docker Buildx
